frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');

@layer components {
  .btn-submit {
    @apply w-full bg-indigo-800 hover:bg-indigo-900 text-white rounded-md px-1 py-2 font-bold mt-2 mb-10;
  }
  .btn-home {
    @apply bg-indigo-800 hover:bg-indigo-900 text-white rounded-md px-10 py-2 font-bold mt-2 mb-10;
  }
  .form-group {
    @apply mb-1;
  }
  .shadow-group {
    @apply shadow-md;
  }
}

body {
  margin: 0;
  color: #475569;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body,
#root {
  height: 100%;
}

body {
  font-family: 'Open Sans', sans-serif;
  height: 100vh;
}

a {
  text-decoration: none;
  color: #000;
}

p {
  line-height: 1.7;
}

ul {
  list-style: none;
}

li {
  line-height: 2.2;
}

h1,
h2,
h3 {
  font-weight: 600;
  margin-bottom: 20px;
}

/* .container {
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
  text-align: center;
} */

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 30px 0;
  border-bottom: 1px solid #e6e6e6;
  margin-bottom: 60px;
}

.header ul {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header ul li {
  margin-left: 20px;
}

.header ul li a {
  display: flex;
  align-items: center;
}

.header ul li a:hover {
  color: #777;
}

.header ul li a svg {
  margin-right: 5px;
}

.heading {
  font-size: 2.5rem;
  font-weight: 700;
  margin-bottom: 30px;
  padding: 0 20px;
}

.heading p {
  color: #828282;
}

.boxes {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  margin-bottom: 30px;
}

.boxes div {
  padding: 30px;
  border: 1px solid #e6e6e6;
  border-radius: 10px;
}

.boxes h2 {
  margin-top: 20px;
}

.boxes a:hover {
  color: #777;
}

.form {
  width: 70%;
  margin: 0 auto;
}

@media (min-width: 900px) {
  .form {
    width: 50%;
  }
}

@media (min-width: 1350px) {
  .form {
    width: 40%;
  }
}

.form-group input,
.form-group textarea,
.form-group select {
  width: 100%;
  padding: 10px;
  border: 1px solid #e6e6e6;
  border-radius: 5px;
  margin-bottom: 10px;
  font-family: inherit;
}

.form-group input:focus,
.form-group textarea:focus,
.form-group select:focus {
  outline: none !important;
  box-shadow: 0 0 10px #3730a3;
}

.form-group label {
  text-align: left;
  display: block;
  margin: 0 0 5px 3px;
}

/* .btn {
  padding: 10px 20px;
  border: 1px solid #000;
  border-radius: 5px;
  background: #000;
  color: #fff;
  font-size: 16px;
  font-weight: 700;
  cursor: pointer;
  text-align: center;
  appearance: button;
  display: flex;
  align-items: center;
  justify-content: center;
} */

.btn svg {
  margin-right: 8px;
}

.btn-reverse {
  background: #fff;
  color: #000;
}

.btn-block {
  width: 100%;
  margin-bottom: 20px;
}

.btn-sm {
  padding: 5px 15px;
  font-size: 13px;
}

.btn-danger {
  background: darkred;
  border: none;
}

.btn-back {
  width: 150px;
  margin-bottom: 20px;
}

.btn:hover {
  transform: scale(1.05);
}

.ticket-created {
  border: 1px solid #e6e6e6;
  border-radius: 5px;
  padding: 50px;
}

.ticket-number {
  margin-bottom: 30px;
}

.ticket-number h2 {
  font-size: 2.3rem;
  margin-bottom: 10px;
}

.ticket-number p {
  font-size: 1.3rem;
}

.ticket-info {
  font-size: 1.3rem;
}

.ticket,
.ticket-headings {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
  background: #f4f4f4;
  padding: 10px 15px;
  border-radius: 5px;
  text-align: center;
  overflow-x: auto;
}

.ticket-headings {
  font-weight: 700;
}

.status {
  background-color: #333;
  color: #fff;
  width: 100px;
  padding: 0 20px;
  justify-self: center;
  border-radius: 10px;
  font-size: 16px;
  text-align: center;
}

.status-new {
  background-color: #22c55e;
}

.status-open {
  background-color: #3730a3;
}

.status-closed {
  background-color: #dc2626;
}

.status-all {
  background-color: #9ca3af;
}

.ticket-page {
  position: relative;
  text-align: left;
}

.ticket-page h2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.ticket-page .btn-block {
  width: 100%;
  margin-top: 30px;
}

.ticket-desc {
  margin: 20px 0;
  font-size: 17px;
  background-color: #f4f4f4;
  border: 1px #ccc solid;
  padding: 10px 15px;
  border-radius: 5px;
}

.note {
  border: 1px solid #e6e6e6;
  border-radius: 5px;
  text-align: left;
  padding: 20px;
  padding-top: 15px;
  padding-bottom: 15px;
  margin-bottom: 20px;
  position: relative;
}

.note-head {
  background: #f4f4f4;
  padding: 5px 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.note-date {
  position: absolute;
  top: 15px;
  right: 10px;
  font-size: 14px;
}

.delete-note {
  color: red;
  cursor: pointer;
  position: absolute;
  bottom: 10px;
  right: 20px;
}

.btn-close {
  background: none;
  border: none;
  color: #000;
  position: absolute;
  top: 0px;
  right: 12px;
  font-size: 25px;
  cursor: pointer;
}

.btn-close:hover {
  color: red;
  transform: scale(0.98);
}

p.status-in-progress {
  color: orangered;
}

p.status-waiting {
  color: red;
}

p.status-ready {
  color: steelblue;
}

p.status-complete {
  color: green;
}

footer {
  position: sticky;
  top: 95vh;
  text-align: center;
}

@media (max-width: 600px) {
  .boxes {
    grid-template-columns: 1fr;
  }

  .form {
    width: 90%;
  }

  .ticket-created h2 {
    font-size: 2.5rem;
  }

  .heading p {
    font-size: 1.5rem;
  }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

@media (min-width: 376px) {
  .only-x-scrollbar::-webkit-scrollbar {
    width: 0px;
    border: 1px solid #fff;
  }

  .only-x-scrollbar::-webkit-scrollbar-track {
    border-radius: 0;
    background: #eeeeee;
  }

  .only-x-scrollbar::-webkit-scrollbar-thumb {
    border-radius: 0;
    background: #b0b0b0;
  }
}

.icon {
  position: absolute;
  top: 12px;
  right: 15px;
}

.icon:hover {
  cursor: pointer;
}

.tickets-table {
  max-width: 900px;
  margin: 0 auto;
}

.btn-submit:hover {
  transform: scale(0.98);
}

.btn-red {
  background-color: #8b0000;
}

.btn-red:hover {
  background-color: #8b0000;
}

.menu-link:hover {
  transform: scale(1.05);
  transition-duration: 250ms;
}

.btn-home:hover {
  transform: scale(0.98);
}

.btn-register {
  margin-left: 1.75rem;
}

div.login-container {
  margin-left: 2rem;
}

@media (max-width: 475px) {
  .login-container {
    display: flex;
    flex-direction: column;
  }
  .btn-register {
    margin-top: 0.5rem;
    margin-left: 0rem;
  }
}

.ticket-card {
  color: rgb(255 255 255);
}

.ticket-card.status-new:hover {
  box-shadow: 0 0 11px #22c55e;
}

.ticket-card.status-open:hover {
  box-shadow: 0 0 11px #3730a3;
}

.ticket-card.status-closed:hover {
  box-shadow: 0 0 11px #dc2626;
}

.ticket-card.status-all:hover {
  box-shadow: 0 0 11px #9ca3af;
}

section.heading {
  margin: 30px auto;
  width: 80%;
  padding-left: 1rem;
}

div.ticket-card-container {
  width: 80%;
  margin: 0 auto;
  margin-bottom: 3rem;
}

@media (max-width: 1279px) {
  div.ticket-card-container,
  section.heading {
    width: 60%;
  }
}

@media (max-width: 1024px) {
  div.ticket-card-container,
  section.heading {
    width: 70%;
  }
}

@media (max-width: 767px) {
  div.ticket-card-container,
  section.heading {
    width: 40%;
  }
  h1.text-left {
    text-align: center;
  }
}

@media (max-width: 640px) {
  div.ticket-card-container,
  section.heading {
    width: 60%;
  }
}

@media (max-width: 425px) {
  div.ticket-card-container,
  section.heading {
    width: 80%;
  }
}

.modal-container {
  width: 60vw;
  top: 50%;
  left: 50%;
  right: auto;
  bottom: auto;
  margin-right: -50%;
  transform: translate(-50%, -50%);
}

textarea {
  outline: 1px solid #e6e6e6;
}

textarea:focus {
  border: 1px solid #e6e6e6;
  box-shadow: 0 0 11px #e6e6e6;
}

@media (max-width: 540px) {
  .modal-container {
    width: 85%;
  }
}

